Fix checktyle errors. Improve task iterator.